--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,8 @@
 
   <body class="d-flex flex-column min-vh-100">
     <%= render 'layouts/header' %>
-    <main>
+    <main class="mt-5">
       <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
       <%= yield %>
     </main>
     <%= render 'layouts/footer' %>
