--- a/app/views/public/coordinates/new.html.erb
+++ b/app/views/public/coordinates/new.html.erb
@@ -7,14 +7,14 @@
   <%= form_with model: @coordinate do |f| %>
     <%= render 'layouts/errors', obj: @coordinate %>
     <div class="row">
-      <div class="col-5">
+      <div class="col-12 col-lg-5">
         <div class="form-group">
           <%= f.label :コーディネート画像, class: "font-weight-bold" %><br>
           <%= f.file_field :coordinate_image, class: "form-control-image", accept: "image/*", id: "form" %>
         </div>
         <div id="image_preview" class="d-flex justify-content-center"></div>
       </div>
-      <div class="col-7">
+      <div class="col-12 col-lg-7">
         <div class="form-group">
           <p class="font-weight-bold">スタイル</p>
           <div class="form-check form-check-inline">
@@ -38,9 +38,9 @@
           <%= f.label :tag_list, "タグ", class: "font-weight-bold" %>
           <%= f.text_field :tag_list, value: @coordinate.tag_list.join(","), class: "form-control", data: { role: "tagsinput" } %>
         </div>
-        <div class="form-group d-flex">
-          <%= f.submit "投稿（公開）", name: "published", class: "btn btn-lg btn-primary flex-fill mr-2" %>
-          <%= f.submit "下書き（非公開）", name: "draft", class: "btn btn-lg btn-success flex-fill ml-2" %>
+        <div class="form-group d-flex flex-column flex-sm-row">
+          <%= f.submit "投稿（公開）", name: "published", class: "btn btn-lg btn-primary flex-fill m-2" %>
+          <%= f.submit "下書き（非公開）", name: "draft", class: "btn btn-lg btn-success flex-fill m-2" %>
         </div>
       </div>
     </div>
