--- a/app/views/public/coordinates/_index.html.erb
+++ b/app/views/public/coordinates/_index.html.erb
@@ -1,5 +1,5 @@
 <div class="col">
-  <div class="row mx-3">
+  <div class="row m-3">
     <% if admin_signed_in? %>
       <h3>投稿一覧</h3>
     <% else %>
@@ -12,42 +12,48 @@
       <% end %>
     <% end %>
   </div>
-  <div class="d-flex justify-content-end">
-    <div class="btn-group" role="group">
-      <% Coordinate.styles_i18n.values.each do |style| %>
-        <%= link_to style, coordinates_path(style: style), class: "btn btn-secondary" %>
-      <% end %>
+  <% unless admin_signed_in? %>
+    <div class="d-flex justify-content-lg-end flex-wrap justify-content-center m-3">
+      <div class="btn-group mx-3" role="group">
+        <% Coordinate.styles_i18n.values.each do |style| %>
+          <%= link_to style, coordinates_path(style: style), class: "btn btn-secondary" %>
+        <% end %>
+      </div>
+      <div>
+        <%= link_to "リセット", coordinates_path, class: "btn btn-success mx-3" %>
+      </div>
     </div>
-    <div>
-      <%= link_to "リセット", coordinates_path, class: "btn btn-success mx-3" %>
-    </div>
-  </div>
+  <% end %>
   <div class="row">
     <% coordinates.each do |coordinate| %>
-      <div class="col-2 m-4">
-        <div class="d-flex flex-row">
+      <div class="col-12 col-lg-3 m-3">
+        <div class="row">
           <% if admin_signed_in? %>
             <%= link_to admin_coordinate_path(coordinate) do %>
               <%= image_tag coordinate.get_coordinate_image(150,200) %>
             <% end %>
           <% else %>
-            <%= link_to coordinate_path(coordinate) do %>
-              <%= image_tag coordinate.get_coordinate_image(150,200) %>
-            <% end %>
-            <div id="bookmark_btn_<%= coordinate.id %>">
-              <%= render "public/bookmarks/btn", coordinate: coordinate %>
+            <div class="col-6 col-lg-12">
+              <div class="d-flex flex-row justify-content-center">
+                <%= link_to coordinate_path(coordinate) do %>
+                  <%= image_tag coordinate.get_coordinate_image(150,200) %>
+                <% end %>
+                <div class="ml-1" id="bookmark_btn_<%= coordinate.id %>">
+                  <%= render "public/bookmarks/btn", coordinate: coordinate %>
+                </div>
+              </div>
             </div>
           <% end %>
-        </div>
-        <div>
           <% if admin_signed_in? %>
             <%= link_to coordinate.user.name, admin_user_path(coordinate.user) %>
           <% else %>
-            <%= link_to coordinate.user.name, coordinates_path(user_id: coordinate.user.id) %><br>
-            <%= link_to coordinate.style_i18n, coordinates_path(style: coordinate.style) %><br>
-            <% coordinate.tag_list.first(2).each do |tag| %>
-              <span class="badge badge-secondary"><%= link_to tag, coordinates_path(tag_name: tag), class: "text-white" %></span><br>
-            <% end %>
+            <div class="col-4 offset-1 col-lg-12">
+              <%= link_to coordinate.user.name, coordinates_path(user_id: coordinate.user.id) %><br>
+              <%= link_to coordinate.style_i18n, coordinates_path(style: coordinate.style) %><br>
+              <% coordinate.tag_list.first(2).each do |tag| %>
+                <span class="badge badge-secondary"><%= link_to tag, coordinates_path(tag_name: tag), class: "text-white" %></span><br>
+              <% end %>
+            </div>
           <% end %>
         </div>
       </div>
