--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <%= render 'public/coordinates/button' %>
     <div class="col">
-      <div class="text-center m-5">
+      <div class="text-center m-3">
         <p>
           Welcome,RANDINATE!<br>
           あなたのコーディネートを投稿し、<br>
@@ -16,7 +16,7 @@
       </div>
       <div class="row">
         <% @coordinates.each do |coordinate| %>
-          <div class="col-2 m-4">
+          <div class="col-4 col-lg-2 m-4">
             <%= link_to coordinate_path(coordinate) do %>
               <%= image_tag coordinate.get_coordinate_image(150,200) %><br>
             <% end %>
