--- a/app/views/public/users/bookmarks.html.erb
+++ b/app/views/public/users/bookmarks.html.erb
@@ -1,31 +1,38 @@
-<div class="container my-5">
-  <div class="row">
+<div class="container">
+  <div class="row m-3">
     <div class="col">
       <div class="row m-3 d-flex justify-content-between">
-        <h2 class="bg-light p-2">ブックマーク一覧</h2>
-        <%= link_to random_coordinates_path(my: "bookmarks"), class: "btn btn-info" do %>
-          マイブックマーク<br>ランダム
-        <% end %>
+        <h3 class="bg-light px-3">ブックマーク一覧</h3>
+        <%= link_to "マイブックマークランダム", random_coordinates_path(my: "bookmarks"), class: "btn btn-info" %>
       </div>
       <% unless current_user.bookmarks.present? %>
         <h1 class="m-3">ブックマークはまだありません</h1>
       <% else %>
-        <div class="row mx-3">
+        <div class="row">
           <% @bookmark_coordinates.each do |coordinate| %>
-            <div class="col-2 m-3">
-              <div class="d-flex flex-row">
-                <%= link_to coordinate_path(coordinate) do %>
-                  <%= image_tag coordinate.get_coordinate_image(150,200) %>
-                <% end %>
-                <div id="bookmark_btn_<%= coordinate.id %>" class="ml-2">
-                  <%= render "public/bookmarks/btn", coordinate: coordinate %>
+            <div class="col-12 col-lg-3 m-3">
+              <div class="row">
+                <div class="col-6 col-lg-12">
+                  <div class="d-flex flex-row justify-content-center">
+                    <%= link_to coordinate_path(coordinate) do %>
+                      <%= image_tag coordinate.get_coordinate_image(120,160) %>
+                    <% end %>
+                    <div class="ml-1" id="bookmark_btn_<%= coordinate.id %>">
+                      <%= render "public/bookmarks/btn", coordinate: coordinate %>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-4 offset-1 col-lg-12">
+                  <%= link_to coordinate.user.name, user_path(coordinate.user) %><br>
+                  <% coordinate.tag_list.first(2).each do |tag| %>
+                    <span class="badge badge-secondary"><%= link_to tag, coordinates_path(tag_name: tag), class: "text-white" %></span><br>
+                  <% end %>
                 </div>
               </div>
-              <div><%= link_to coordinate.user.name, user_path(coordinate.user) %></div>
             </div>
           <% end %>
         </div>
-        <div class="row">
+        <div class="row m-3">
           <%= paginate @bookmark_coordinates %>
         </div>
       <% end %>
