--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -3,7 +3,7 @@
     <div class="col-10">
       <h1 class="bg-light d-inline-block px-3">会員一覧</h1>
     </div>
-    <div class="col-md-9 offset-md-1 my-3">
+    <div class="col-10 offset-1 my-3 table-responsive">
       <table class="table">
         <thead class="bg-light">
           <tr>
