--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
-    <div class="col-4 my-3">
-      <h1 class="bg-light d-inline-block px-3">会員情報編集</h1>
+    <div class="col-md-10 offset-md-1 my-3">
+      <h2 class="bg-light d-inline-block px-3">会員情報編集</h2>
     </div>
   </div>
   <%= form_with model: @user, url: user_path, method: :patch do |f| %>
