--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -16,15 +16,27 @@
       </div>
       <div class="row">
         <% @coordinates.each do |coordinate| %>
-          <div class="col-6 col-md-4 col-xl-2 my-3">
-            <%= link_to coordinate_path(coordinate) do %>
-              <%= image_tag coordinate.get_coordinate_image(120,160) %><br>
-            <% end %>
-            <%= link_to coordinate.user.name, coordinates_path(user_id: coordinate.user.id) %><br>
-            <%= link_to coordinate.style_i18n, coordinates_path(style: coordinate.style) %><br>
-            <% coordinate.tag_list.first(2).each do |tag| %>
-              <span class="badge badge-secondary"><%= link_to tag, coordinates_path(tag_name: tag), class: "text-white" %></span><br>
-            <% end %>
+          <div class="col-6 col-md-4 col-xl-3 my-3">
+            <div class="card-deck">
+              <div class="card">
+                <%= link_to coordinate_path(coordinate) do %>
+                  <%= image_tag coordinate.coordinate_image, class:"card-img-top" %>
+                <% end %>
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item">
+                    <%= link_to coordinate.user.name, coordinates_path(user_id: coordinate.user.id) %>
+                  </li>
+                  <li class="list-group-item">
+                    <%= link_to coordinate.style_i18n, coordinates_path(style: coordinate.style) %>
+                  </li>
+                  <li class="list-group-item">
+                    <% coordinate.tag_list.first(2).each do |tag| %>
+                      <span class="badge badge-secondary"><%= link_to tag, coordinates_path(tag_name: tag), class: "text-white" %></span>
+                    <% end %>
+                  </li>
+                </ul>
+              </div>
+            </div>
           </div>
         <% end %>
       </div>
