[Add] 類似画像検索-途中

--- a/app/views/public/coordinates/_button.html.erb
+++ b/app/views/public/coordinates/_button.html.erb
@@ -1,4 +1,5 @@
 <div class="d-flex flex-column col-11 col-lg-3 mx-3">
+  <%= render "public/searches/form" %>
   <%= link_to new_coordinate_path, class: "btn btn-success btn-lg mb-3" do %>
     コーディネート<br>投稿
   <% end %>
