[Add] Vision APIによる類似画像検索

--- a/app/views/public/coordinates/show.html.erb
+++ b/app/views/public/coordinates/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
     <%= render 'public/coordinates/button' %>
-    <%= render 'public/coordinates/show', coordinate: @coordinate, tags: @tags %>
+    <%= render 'public/coordinates/show', coordinate: @coordinate, tags: @tags, similar: @similar %>
   </div>
 </div>
