--- a/app/views/public/coordinates/random.html.erb
+++ b/app/views/public/coordinates/random.html.erb
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+<div class="container">
   <div class="row">
     <%= render 'public/coordinates/button' %>
     <%= render 'public/coordinates/show', coordinate: @random, tags: @tags %>
