--- a/app/views/public/coordinates/_show.html.erb
+++ b/app/views/public/coordinates/_show.html.erb
@@ -14,6 +14,7 @@
     <% end %>
   </div>
 
+  <!-- 類似画像検索の結果表示 -->
   <div id="similar">
     <% if similar.present? %>
       <div class="row mb-3">
@@ -25,6 +26,7 @@
       </div>
     <% end %>
   </div>
+  <!---->
 
   <% if coordinate.user == current_user %>
     <div class="row d-flex justify-content-end">
