[Add] アクションスタンプ機能

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
   <body class="d-flex flex-column min-vh-100">
     <%= render 'layouts/header' %>
-    <main class="mt-5">
+    <main class="my-5">
       <p class="notice"><%= notice %></p>
       <%= yield %>
     </main>
