--- a/app/views/public/bookmarks/_btn.html.erb
+++ b/app/views/public/bookmarks/_btn.html.erb
@@ -4,12 +4,12 @@
 <% else %>
   <% if coordinate.bookmarked_by?(current_user) %>
     <%= link_to coordinate_bookmarks_path(coordinate), method: :delete, remote: true do %>
-      <i class="fa-solid fa-heart fa-2xl" style="color:red;"></i>
+      <i class="fa-solid fa-bookmark fa-2xl text-success"></i>
       <span class="h4"><%= coordinate.bookmarks.count %></span>
     <% end %>
   <% else %>
     <%= link_to coordinate_bookmarks_path(coordinate), method: :post, remote: true do %>
-      <i class="fa-regular fa-heart fa-2xl"></i>
+      <i class="fa-regular fa-bookmark fa-2xl"></i>
       <span class="h4"><%= coordinate.bookmarks.count %></span>
     <% end %>
   <% end %>
