--- a/app/views/public/bookmarks/_btn.html.erb
+++ b/app/views/public/bookmarks/_btn.html.erb
@@ -1,6 +1,6 @@
 <% unless user_signed_in? %>
-  <i class="fa-solid fa-heart fa-2xl" style="color:red;"></i>
-  <span style="color:red;"><%= coordinate.bookmarks.count %></span>
+  <i class="fa-solid fa-bookmark fa-2xl" style="color:green;"></i>
+  <span style="color:green;"><%= coordinate.bookmarks.count %></span>
 <% else %>
   <% if coordinate.bookmarked_by?(current_user) %>
     <%= link_to coordinate_bookmarks_path(coordinate), method: :delete, remote: true do %>
