[Finish] アクションスタンプ機能

--- a/app/views/public/coordinates/random.html.erb
+++ b/app/views/public/coordinates/random.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
     <%= render 'public/coordinates/button' %>
-    <%= render 'public/coordinates/show', coordinate: @random, tags: @tags, similar: @similar %>
+    <%= render 'public/coordinates/show', coordinate: @random, tags: @tags, similar: @similar, actions: @actions %>
   </div>
 </div>
