--- a/app/views/public/coordinates/_show.html.erb
+++ b/app/views/public/coordinates/_show.html.erb
@@ -70,24 +70,9 @@
     </div>
   </div>
   <div class="row mt-3">
-    <% @stamps.group(:stamp).count.each do |stamp,count| %>
-      <% unless user_signed_in? %>
-        <i class="m-3 text-warning fa-solid fa-2xl <%= stamp %>"></i>
-        <span><%= count %></span>
-      <% else %>
-        <% if current_user.actions.exists?(stamp: stamp) %>
-          <%= link_to coordinate_action_path(coordinate), method: :delete, class: "btn" do %>
-            <i class="text-warning fa-solid fa-2xl <%= stamp %>"></i>
-            <span><%= count %></span>
-          <% end %>
-        <% else %>
-          <i class="my-3 text-warning fa-solid fa-2xl <%= stamp %>"></i>
-          <span><%= count %></span>
-        <% end %>
-      <% end %>
-    <% end %>
+    <%= render 'public/actions/stamp', coordinate: coordinate, actions: actions %>
   </div>
   <div class="row mt-3">
-    <%= render 'public/actions/action', coordinate: coordinate %>
+    <%= render 'public/actions/btn', coordinate: coordinate %>
   </div>
 </div>
