[Add] ユーザー退会時の投稿非公開

--- a/app/views/admin/coordinates/show.html.erb
+++ b/app/views/admin/coordinates/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
   <div class="row">
-    <%= render 'public/coordinates/show', coordinate: @coordinate, tags: @tags %>
+    <%= render 'public/coordinates/show', coordinate: @coordinate, tags: @tags, similar: @similar, actions: @actions %>
   </div>
 </div>
