--- a/app/views/public/coordinates/_index.html.erb
+++ b/app/views/public/coordinates/_index.html.erb
@@ -20,7 +20,7 @@
         <% end %>
       </div>
       <div>
-        <%= link_to "リセット", coordinates_path, class: "btn btn-success mx-3" %>
+        <%= link_to "絞り込みリセット", coordinates_path, class: "btn btn-success mx-3" %>
       </div>
     </div>
   <% end %>
