--- a/app/views/public/coordinates/new.html.erb
+++ b/app/views/public/coordinates/new.html.erb
@@ -12,6 +12,7 @@
           <%= f.label :コーディネート画像, class: "font-weight-bold" %><br>
           <%= f.file_field :coordinate_image, class: "form-control-image", accept: "image/*", id: "form" %>
         </div>
+        <!-- 画像のプレビュー表示 -->
         <div id="image_preview" class="d-flex justify-content-center"></div>
       </div>
       <div class="col-12 col-lg-7">
