--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -7,7 +7,7 @@
           Welcome,RANDINATE!<br>
           あなたのコーディネートを投稿し、<br>
           みんなのコーディネートを参考にしよう！<br>
-          服装に悩んであなたでもランダム検索<br>
+          服装に悩んでるあなたでもランダムに検索<br>
           あなたのお気に入りを探そう！！！
         </p>
       </div>
