--- a/app/views/public/coordinates/_show.html.erb
+++ b/app/views/public/coordinates/_show.html.erb
@@ -18,7 +18,7 @@
     <% if similar.present? %>
       <div class="row mb-3">
         <% similar.each do |image| %>
-          <div class="col-4 d-flex justify-content-center">
+          <div class="col-12 col-md-4 d-flex justify-content-center">
             <img src="<%= image %>" style="width: 240px;"/>
           </div>
         <% end %>
